--- a/boatguard/Info.plist
+++ b/boatguard/Info.plist
@@ -51,10 +51,10 @@
 		<string>Dosis-Regular.otf</string>
 		<string>Dosis-SemiBold.otf</string>
 	</array>
+	<key>UIMainStoryboardFile</key>
+	<string>Main</string>
 	<key>UIMainStoryboardFile~ipad</key>
 	<string>Main_ipad</string>
-	<key>UIMainStoryboardFile~iphone</key>
-	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
